WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142235
bmalloc: Added missing features to the malloc zone introspection API
https://bugs.webkit.org/show_bug.cgi?id=142235
Summary
bmalloc: Added missing features to the malloc zone introspection API
Geoffrey Garen
Reported
2015-03-03 14:34:41 PST
bmalloc: Added missing features to the malloc zone introspection API
Attachments
Patch
(4.90 KB, patch)
2015-03-03 14:36 PST
,
Geoffrey Garen
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-03-03 14:36:24 PST
Created
attachment 247795
[details]
Patch
WebKit Commit Bot
Comment 2
2015-03-03 14:39:27 PST
Attachment 247795
[details]
did not pass style-queue: ERROR: Source/bmalloc/bmalloc/Zone.cpp:42: good_size is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/bmalloc/bmalloc/Zone.cpp:60: force_lock is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/bmalloc/bmalloc/Zone.cpp:64: force_unlock is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/bmalloc/bmalloc/Zone.cpp:80: type_mask is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/bmalloc/bmalloc/Zone.cpp:80: zone_address is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 5 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2015-03-03 14:41:37 PST
> ERROR: Source/bmalloc/bmalloc/Zone.cpp:42: good_size is incorrectly named. > Don't use underscores in your identifier names. > [readability/naming/underscores] [4] > ERROR: Source/bmalloc/bmalloc/Zone.cpp:60: force_lock is incorrectly named. > Don't use underscores in your identifier names. > [readability/naming/underscores] [4] > ERROR: Source/bmalloc/bmalloc/Zone.cpp:64: force_unlock is incorrectly > named. Don't use underscores in your identifier names. > [readability/naming/underscores] [4] > ERROR: Source/bmalloc/bmalloc/Zone.cpp:80: type_mask is incorrectly named. > Don't use underscores in your identifier names. > [readability/naming/underscores] [4] > ERROR: Source/bmalloc/bmalloc/Zone.cpp:80: zone_address is incorrectly > named. Don't use underscores in your identifier names. > [readability/naming/underscores] [4]
These are to match the callback API.
Andreas Kling
Comment 4
2015-03-03 14:42:42 PST
Comment on
attachment 247795
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=247795&action=review
r=me
> Source/bmalloc/ChangeLog:26 > + Zone class since the can stand alone.
the can stand alone.
> Source/bmalloc/bmalloc/Zone.cpp:71 > +static void statistics(malloc_zone_t*, malloc_statistics_t* statistics) > +{ > + memset(statistics, 0, sizeof(malloc_statistics_t)); > +}
I guess we can assume that no one would be annoying enough to call this with statistics=nullptr.
Geoffrey Garen
Comment 5
2015-03-03 14:46:20 PST
Committed
r180958
: <
http://trac.webkit.org/changeset/180958
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug